Use Arrays.asList() for varargs handling + adding message roles as constants